force-app/main/default/objects/LivestormImport__c/LivestormImport__c.object-meta.xml
<CustomObject>
    <label>Livestorm Import</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Livestorm Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Livestorm Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>