force-app/main/default/objects/LivestormImport__c/fields/AttendeeConnectionLink__c.field-meta.xml
<CustomField>
    <fullName>AttendeeConnectionLink__c</fullName>
    <label>Attendee Connection Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>