force-app/main/default/objects/LivestormImport__c/fields/AttendeeCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>AttendeeCreatedAt__c</fullName>
    <label>Attendee Created At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>