force-app/main/default/objects/LivestormImport__c/fields/AttendeeEmail__c.field-meta.xml
<CustomField>
    <fullName>AttendeeEmail__c</fullName>
    <label>Attendee Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>