force-app/main/default/objects/LivestormImport__c/fields/AttendeeFirstName__c.field-meta.xml
<CustomField>
    <fullName>AttendeeFirstName__c</fullName>
    <label>Attendee FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>