force-app/main/default/objects/LivestormImport__c/fields/AttendeeIdentify__c.field-meta.xml
<CustomField>
    <fullName>AttendeeIdentify__c</fullName>
    <label>Attendee Identify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>