force-app/main/default/objects/LivestormImport__c/fields/AttendeeLastName__c.field-meta.xml
<CustomField>
    <fullName>AttendeeLastName__c</fullName>
    <label>Attendee LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>