force-app/main/default/objects/LivestormImport__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Livestorm Imports</relationshipLabel>
    <relationshipName>LivestormImports</relationshipName>
    <type>Lookup</type>
</CustomField>