force-app/main/default/objects/LivestormImport__c/fields/EmailConsent__c.field-meta.xml
<CustomField>
    <fullName>EmailConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Consent from Livestorm Campaign give by attendee.</inlineHelpText>
    <label>Email Consent</label>
    <type>Checkbox</type>
</CustomField>