force-app/main/default/objects/LivestormImport__c/fields/ErrorReason__c.field-meta.xml
<CustomField>
    <fullName>ErrorReason__c</fullName>
    <label>Error Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>