force-app/main/default/objects/LivestormImport__c/fields/LivestormJSON__c.field-meta.xml
<CustomField>
    <fullName>LivestormJSON__c</fullName>
    <description>This field stores the POST JSON message inbound from Livestorm to Salesforce</description>
    <label>Livestorm JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>