force-app/main/default/objects/LivestormImport__c/fields/WebinarCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>WebinarCreatedAt__c</fullName>
    <label>Webinar Created At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>