force-app/main/default/objects/LivestormImport__c/fields/WebinarEstimatedStartedAt__c.field-meta.xml
<CustomField>
    <fullName>WebinarEstimatedStartedAt__c</fullName>
    <label>Webinar Estimated Started At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>