force-app/main/default/objects/LivestormImport__c/fields/WebinarIdentify__c.field-meta.xml
<CustomField>
    <fullName>WebinarIdentify__c</fullName>
    <label>Webinar Identify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>