force-app/main/default/objects/LivestormImport__c/fields/WebinarRoomLink__c.field-meta.xml
<CustomField>
    <fullName>WebinarRoomLink__c</fullName>
    <label>Webinar Room Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>