force-app/main/default/objects/LivestormImport__c/fields/WebinarSlug__c.field-meta.xml
<CustomField>
    <fullName>WebinarSlug__c</fullName>
    <description>Name of the webinar session on Livestorm</description>
    <label>Webinar Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>