force-app/main/default/objects/LivestormImport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AttendeeEmail__c</columns>
    <columns>WebinarSlug__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WebinarIdentify__c</columns>
    <columns>Status__c</columns>
    <columns>ErrorReason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>