force-app/main/default/objects/LivestormImport__c/listViews/All_Failed.listView-meta.xml
<ListView>
    <fullName>All_Failed</fullName>
    <columns>NAME</columns>
    <columns>AttendeeEmail__c</columns>
    <columns>WebinarSlug__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WebinarIdentify__c</columns>
    <columns>Status__c</columns>
    <columns>ErrorReason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Failed</label>
</ListView>