force-app/main/default/objects/LivestormImport__c/listViews/All_Today.listView-meta.xml
<ListView>
    <fullName>All_Today</fullName>
    <columns>NAME</columns>
    <columns>AttendeeEmail__c</columns>
    <columns>WebinarSlug__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WebinarIdentify__c</columns>
    <columns>Status__c</columns>
    <columns>ErrorReason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
</ListView>