force-app/main/default/objects/LivestormImport__c/listViews/Registrants_Noordhoff.listView-meta.xml
<ListView>
    <fullName>Registrants_Noordhoff</fullName>
    <columns>NAME</columns>
    <columns>AttendeeEmail__c</columns>
    <columns>WebinarSlug__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WebinarIdentify__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff</value>
    </filters>
    <label>Registrants Noordhoff</label>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>