force-app/main/default/objects/LivestormImport__c/listViews/Registrants_Plantyn.listView-meta.xml
<ListView>
    <fullName>Registrants_Plantyn</fullName>
    <columns>NAME</columns>
    <columns>AttendeeEmail__c</columns>
    <columns>EmailConsent__c</columns>
    <columns>WebinarSlug__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WebinarIdentify__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Plantyn</value>
    </filters>
    <label>Registrants Plantyn</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>